<!--
  ~ strings.xml
  ~ Copyright (c) 2018
  ~ Authors: Ionut Damian, Michael Dietz, Frank Gaibler, Daniel Langerenken, Simon Flutura,
  ~ Vitalijs Krumins, Antonio Grieco
  ~ ******************************************************
  ~ This file is part of the Social Signal Interpretation for Java (SSJ) framework
  ~ developed at the Lab for Human Centered Multimedia of the University of Augsburg.
  ~
  ~ SSJ has been inspired by the SSI (http://openssi.net) framework. SSJ is not a
  ~ one-to-one port of SSI to Java, it is an approximation. Nor does SSJ pretend
  ~ to offer SSI's comprehensive functionality and performance (this is java after all).
  ~ Nevertheless, SSJ borrows a lot of programming patterns from SSI.
  ~
  ~ This library is free software; you can redistribute it and/or modify it under the
  ~ terms of the GNU General Public License as published by the Free Software
  ~ Foundation; either version 3 of the License, or any later version.
  ~
  ~ This library is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this library; if not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">SSJ Creator</string>
    <!--creator menu-->
    <string name="str_addMenu">Add</string>
    <string name="str_options">Options</string>
    <string name="str_stream_input">Stream Input</string>
    <string name="str_stream_output">Stream Output</string>
    <string name="str_event_input">Event Input</string>
    <string name="str_sensors">Sensors</string>
    <string name="str_sensor_channels">Sensor Channels</string>
    <string name="str_transformers">Transformers</string>
    <string name="str_consumers">Consumers</string>
    <string name="str_eventhandlers">Event Handlers</string>
    <!--file menu-->
    <string name="str_configMenu">Menu</string>
    <string name="str_save">Save Pipeline</string>
    <string name="str_load_pipeline">Load Pipeline</string>
    <string name="str_delete_pipeline">Delete Pipeline</string>
    <string name="str_load_strategy">Load Feedback Strategy</string>
    <string name="str_clear">Clear Canvas</string>
    <!--dialogs-->
    <string name="str_error">Error</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_delete">Delete</string>
    <string name="str_saveError">Could not save file</string>
    <string name="str_loadError">Could not load file</string>
    <string name="str_deleteError">Could not delete file</string>
    <string name="str_location_title">Information</string>
    <string name="str_location_message">This app requires access to location data to enable its continuous recording in the background with the GPS sensor component. Without access this component can not provide location data to your pipelines.\n\nPlease enable it by setting the app\'s location permission (Apps -&gt; SSJ Creator -&gt; Permissions -&gt; Location) to \"Allow all the time\".</string>
    <string name="str_location_button">I understand</string>
    <!--provider options-->
    <string name="str_frameSize">Frame size (s)</string>
    <string name="str_delta">Delta (s)</string>
    <string name="str_eventrigger">Event trigger:</string>
    <string name="str_frameSizeSmallest">smallest</string>
    <!--tabs-->
    <string name="str_pipe">Pipe</string>
    <string name="str_console">Console</string>
    <string name="str_annotation">Annotation</string>
    <!--annotation-->
    <string name="str_fileName">File name</string>
    <string name="str_filePath">File path</string>
    <string name="str_defaultAnno">class%d</string>
    <!--toasts-->
    <string name="err_invalidOption">Invalid option value</string>
    <string name="err_buildPipe">Error building pipeline</string>

    <!--dialog-->
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="feedback">Feedback</string>
    <string name="select_action">Select an action to proceed</string>
    <string name="keep_inner_components">Keep inner components?</string>

    <!--tutorial-->
    <string name="slide1_title">Welcome</string>
    <string name="slide1_text">SSJ Creator allows you to perform signal processing activities by creating, editing and executing SSJ pipelines</string>
    <string name="slide2_title">Load Standard Pipeline</string>
    <string name="slide2_text">To start, simply load one of the standard pipelines from the file menu</string>
    <string name="slide3_title">Create Your Own Pipeline</string>
    <string name="slide3_text">You can also create your own pipeline from scratch (or edit existing ones) by adding components from the paint menu</string>
    <string name="slide4_title">Change connection type</string>
    <string name="slide4_text">To change the type of a connection, simply tap on it</string>
    <string name="slide5_title">Start the Pipeline</string>
    <string name="slide5_text">Once you have a pipeline, press the play button to start it</string>
    <string name="slide6_title">Enjoy</string>
    <string name="slide6_text">You can check out your pipeline in action using the different views</string>
    <string name="anno_msband">Annotate using MS Band 2</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_canvas_separator">Canvas</string>
    <string name="drawer_pipelines_separator">Pipelines</string>
    <string name="drawer_strategy_separator">Feedback Strategy</string>
    <string name="drawer_settings">Settings</string>
    <string name="visualize_data">Visualize Data</string>
    <string name="select_file">Select file</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>

    <!--explaning text-->
    <string name="level_behaviour_message">
        The level behaviours of feedback components are taken into account to decide, whether we\
        should progress to the next level (all \"Progress\" components are active and no\
        other component) or regress to the previous level (all \"Regress\" components\
        are active and no other component).
    </string>
    <string name="train_load_anno_hint">anno file</string>
    <string name="train_load_stream_hint">stream file</string>
    <string name="train_select_model_label">Select model type</string>
    <string name="train_anno_convert_frames">Convert to frames</string>
    <string name="train_anno_convert_size">frame size</string>
    <string name="train_anno_convert_label">Default label</string>
    <string name="train_anno_convert_percent">Min class fill</string>
    <string name="train_button">Train Model</string>
    <string name="train_model_path">Save to path</string>
    <string name="train_model_name">Model name</string>
    <string name="train_model_action">Train Model</string>
    <string name="drawer_model_separator">Model</string>
    <string name="select_folder">Select Folder</string>
    <string name="str_session">Session</string>
    <string name="train_session_list_title">Data Sources</string>
    <string name="button_session_list_add">Add Source ...</string>
    <string name="train_anno_garbage">Fill up empty spaces in anno</string>
    <string name="str_model_conn">Model</string>
    <string name="str_modelhandler_conn">Model Handler</string>
    <string name="str_models">Models</string>
    <string name="str_options_pipe">Pipeline Options</string>
    <string name="str_canvas">Pipeline</string>
    <string name="str_notification_text">Pipeline running as service.</string>
</resources>
