<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ activity_main_drawer.xml
  ~ Copyright (c) 2017
  ~ Authors: Ionut Damian, Michael Dietz, Frank Gaibler, Daniel Langerenken, Simon Flutura,
  ~ Vitalijs Krumins, Antonio Grieco
  ~ ******************************************************
  ~ This file is part of the Social Signal Interpretation for Java (SSJ) framework
  ~ developed at the Lab for Human Centered Multimedia of the University of Augsburg.
  ~
  ~ SSJ has been inspired by the SSI (http://openssi.net) framework. SSJ is not a
  ~ one-to-one port of SSI to Java, it is an approximation. Nor does SSJ pretend
  ~ to offer SSI's comprehensive functionality and performance (this is java after all).
  ~ Nevertheless, SSJ borrows a lot of programming patterns from SSI.
  ~
  ~ This library is free software; you can redistribute it and/or modify it under the
  ~ terms of the GNU General Public License as published by the Free Software
  ~ Foundation; either version 3 of the License, or any later version.
  ~
  ~ This library is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this library; if not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_framework"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/str_options" />
        <item
            android:id="@+id/action_save"
            android:icon="@drawable/ic_save_black_24dp"
            android:title="@string/str_save" />
        <item
            android:id="@+id/action_load"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/str_load" />
        <item
            android:id="@+id/action_delete"
            android:icon="@drawable/ic_delete_forever_black_24dp"
            android:title="@string/str_delete" />
    </group>
</menu>