<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ graph_layout.xml
  ~ Copyright (c) 2017
  ~ Authors: Ionut Damian, Michael Dietz, Frank Gaibler, Daniel Langerenken, Simon Flutura,
  ~ Vitalijs Krumins, Antonio Grieco
  ~ ******************************************************
  ~ This file is part of the Social Signal Interpretation for Java (SSJ) framework
  ~ developed at the Lab for Human Centered Multimedia of the University of Augsburg.
  ~
  ~ SSJ has been inspired by the SSI (http://openssi.net) framework. SSJ is not a
  ~ one-to-one port of SSI to Java, it is an approximation. Nor does SSJ pretend
  ~ to offer SSI's comprehensive functionality and performance (this is java after all).
  ~ Nevertheless, SSJ borrows a lot of programming patterns from SSI.
  ~
  ~ This library is free software; you can redistribute it and/or modify it under the
  ~ terms of the GNU General Public License as published by the Free Software
  ~ Foundation; either version 3 of the License, or any later version.
  ~
  ~ This library is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this library; if not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_bottom_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_bottom_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <hcm.ssj.creator.view.StreamLayout
            android:id="@+id/stream_layout"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </hcm.ssj.creator.view.StreamLayout>

    </ScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|bottom">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/load_stream_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/load_button_top_padding"
            android:text="@string/select_file" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:visibility="gone"
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/load_button_top_padding"
            android:text="@string/play" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:visibility="gone"
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/load_button_top_padding"
            android:text="@string/reset" />

    </LinearLayout>

</LinearLayout>
